Fix the problem of no-wrapping for the symptoms and diagnosis column. Change warning to attention for yellow warning light.

--- a/frontend/marsapp/src/App.css
+++ b/frontend/marsapp/src/App.css
@@ -1076,3 +1076,12 @@ li a {
 .table td, .table th {
     text-align: center !important;
 }
+
+#column-wrap {
+    word-break: break-word !important;
+    min-width: 600px !important;
+}
+
+#no-wrap, .table th{
+    white-space: nowrap !important;
+}
